--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.23.1",
+    "sweetalert2": "^11.12.0",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
